@@ -26,6 +26,8 @@ package com.cloudbees.plugins.credentials;
 import com.cloudbees.plugins.credentials.common.IdCredentials;
 import edu.umd.cs.findbugs.annotations.CheckForNull;
 import edu.umd.cs.findbugs.annotations.NonNull;
+
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -89,13 +91,14 @@ public abstract class CredentialsNameProvider<C extends Credentials> {
         NameWith nameWith = clazz.getAnnotation(NameWith.class);
         if (nameWith != null) {
             try {
-                CredentialsNameProvider nameProvider = nameWith.value().newInstance();
+                CredentialsNameProvider nameProvider = nameWith.value().getDeclaredConstructor().newInstance();
                 String name = nameProvider.getName(credentials);
                 if (!name.isEmpty()) {
                     LOGGER.fine(() -> "named `" + name + "` from " + nameProvider);
                     return new Result(name, nameWith.priority());
                 }
-            } catch (ClassCastException | InstantiationException | IllegalAccessException e) {
+            } catch (ClassCastException | InstantiationException | IllegalAccessException
+                     | InvocationTargetException | NoSuchMethodException e) {
                 // ignore
             }
         }
